# smartcito

./: .env.example  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.hardware.yml  docker-compose.services.yml  docker-compose.yml  orca  pyproject.toml  smartcito
.docker-build-logs/: compose_recipe_builds.sh  publish-latest-summary.txt  summary.txt
.docker-build-logs-corrected/: summary.txt
.docker-build-logs-parallel/: summary.txt
.github/: CODEOWNERS
.venv-keras/: pyvenv.cfg
Orca-Operator/: Makefile  PROJECT  README.md  bundle.Dockerfile  go.mod
OrcaOs/: Dockerfile.toolchain  Makefile  README.md  linker.ld
ai/: README.md  __init__.py  requirements.txt
ai_models/: Dockerfile  README.md  inference.py  model.py
air/: __init__.py
camera_module/: Dockerfile  README.md  __init__.py  requirements.txt  service.py
citosmart/: Dockerfile  README.md  alembic.ini  db.sqlite3  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
cli/: README.md
contrib/: README.md
database/: Dockerfile  README.md  bootstrap.py
datasets/: sample_predictions.json  sample_training_data.json
docs/: API.md  ARCHITECTURE.md  CACHING_LAYER.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  GITFLOW.md  IDENTITY_SYSTEM.md  ISSUE_BACKLOG.md  KAGGLE_GUIDE.md  KAGGLE_USAGE.md  MODEL_CARD.md  OPERATIONAL_FLOW.md  ORCA_EDGE_V1_RELEASE.md  ORCA_MODEL_RUNTIME.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SECURITY_DEEP_DIVE.md  SMARTCITO_EDGE_V1_RELEASE.md  SMARTCITO_MODEL_RUNTIME.md  WIKI.md  (+3 more)
(+965 files in other folders)
